<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食家点餐系统</string>
    <string name="action_settings">设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="txt_user_name">用户名</string>
    <string name="txt_password">密    码</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密    码</string>
    <string name="btn_login">登录</string>
    <string name="title_dialog_login">登录</string>
    <string name="hint_dialog_login">正在登录，请稍候...</string>
    <string name="hint_dialog_chargeped">正在联网修改密码，请稍候...</string>
    <string name="hint_dialog_login_success">登陆成功,欢迎%1$s使用</string>
    <string name="hint_dialog_login_faild">登陆失败,请检查用户名/密码是否正确...</string>
    <string name="txt_old_pwd">原密码</string>
    <string name="txt_new_pwd_1">新密码</string>
    <string name="txt_new_pwd_2">确认密码</string>
    <string name="hint_changepwd">尊敬的用户，这是您首次登录，请修改密码！</string>
    <string name="hint_changepwd_oldpwderr">原密码不正确，请确认后再试！</string>
    <string name="hint_changepwd_newpwderr">验证新密码不一致，请重新输入新密码！</string>
    <string name="hint_changepwd_success">修改密码成功，请牢记新密码！</string>
    <string name="hint_changepwd_faild">修改密码失败！</string>
    <string name="hint_exit_dialog">提示</string>
    <string name="txt_exit_ack">确认退出？</string>
    <string name="tst_no_name">用户名不能为空！</string>
    <string name="tst_no_pwd">密码不能为空！</string>
    <string name="txt_tableid">桌号</string>
    <string name="txt_types">菜类</string>
    <string name="txt_sd_staple_food">主食</string>
    <string name="txt_sd_hot_food">热菜</string>
    <string name="txt_sd_cool_food">凉菜</string>
    <string name="txt_sd_soup_food">汤羹</string>
    <string name="txt_sd_drink_food">饮料</string>
    <string name="txt_sd_tableware_food">餐具</string>
    <string name="txt_info_introduction">菜品介绍</string>
    <string name="txt_info_evaluation">客户评价</string>
    <string name="txt_infos_serial_number">尊敬的用户，你的流水号是%1$s</string>
    <string name="txt_infos_index">序号</string>
    <string name="txt_infos_dish_name">菜名</string>
    <string name="txt_infos_unit_price">单价</string>
    <string name="txt_infos_unitprice">￥%1$d</string>
    <string name="txt_infos_number">数量</string>
    <string name="txt_infos_totle_price">价格</string>
    <string name="txt_infos_note">备注</string>
    <string name="txt_infos_dish_type">种类</string>
    <string name="txt_infos_delete">删除</string>
    <string name="msg_infos_delete">真的要删除%1$s</string>
    <string name="tit_infos_back">返回</string>
    <string name="msg_infos_back">您真的要放弃当前订单吗？？？</string>
    <string name="tit_infos_ok">确认提交订单</string>
    <string name="msg_infos_ok">账号：%1$s\n流水号：%2$s</string>
    <string name="hint_infos_note">修改备注为：%1$s</string>
    <string name="txt_checkout_date">日期：%1$s</string>
    <string name="txt_checkout_tableid">桌号：%1$s</string>
    <string name="txt_checkout_tableid_select">桌号：(请选择要查询的订单)</string>
    <string name="txt_checkout_serial_number">流水号</string>
    <string name="txt_checkout_select">选择</string>
    <string name="txt_checkout_info_head">流水号：%1$s\t总价：%2$s\t会员名：</string>
    <string name="tit_checkout_info">结算</string>
    <string name="msg_checkout_info">您真的放弃结算吗？</string>
    <string name="txt_progress_serial_number">流水号:%1$s</string>
    <string name="tit_changetable_changetable">换台</string>
    <string name="txt_changetable_currant">当前桌号</string>
    <string name="txt_changetable_chenged">更换桌号</string>
    <string name="txt_changetable_chenged_ok">确定将%1$s桌换到%2$s桌吗？</string>
    <string name="tit_changetable_merge">并台</string>
    <string name="txt_changetable_table_a">桌号A</string>
    <string name="txt_changetable_table_b">桌号B</string>
    <string name="txt_changetable_merge_ok">确定将%1$s桌并到%2$s桌吗？</string>
    <string name="hint_update_ok">数据更新成功</string>
    <string name="hint_update_faile">数据更新失败</string>
    <string name="hint_dialog_updating">正在读取数据，请稍候...</string>
    <string name="hint_must_select_one">请务必选择一条订单</string>

</resources>