<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_background" >

    <TextView
        android:id="@+id/txt_info_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/frontsize_small"
        android:textColor="@color/black"
        android:text="@string/txt_infos_serial_number"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/txt_infos_index" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_dish_name" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_unit_price" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_number" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_totle_price" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_note" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_dish_type" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/txt_infos_delete" />

    </LinearLayout>

    <ListView
        android:id="@+id/lst_infos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" 
        android:gravity="center_vertical|right">

        <Button
            android:id="@+id/btn_infos_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_selector"
            android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

        <Button
            android:id="@+id/btn_infos_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:background="@drawable/btn_ok_selector"
             android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"  />

    </LinearLayout>

</LinearLayout>
