<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       
        android:gravity="center_horizontal"
        android:background="@drawable/menu_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_change_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/frontsize_tinylarge"
            android:textColor="@color/red"
            android:layout_marginTop="50dp"
            android:text="@string/hint_changepwd" />

        <TableLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

              

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_user_name"
                        android:textSize="@dimen/frontsize_normal"
                                    android:textColor="@color/black"
                        android:gravity="right" />

                    <TextView
                        android:id="@+id/txt_changepwd_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                         android:textSize="@dimen/frontsize_normal"
                          android:textColor="@color/black"
                        android:text="TextView" />
               
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/txt_old_pwd"
                        android:textColor="@color/black"
                        android:textSize="@dimen/frontsize_normal" />

                    <EditText
                        android:id="@+id/edt_old_pwd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:inputType="textPassword"
                        android:layout_weight="1" />
                
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

               

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_new_pwd_1"
                        android:textSize="@dimen/frontsize_normal"
                         android:textColor="@color/black"
                         android:gravity="right" />

                    <EditText
                        android:id="@+id/edt_new_pwd_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:inputType="textPassword"
                        android:layout_weight="1" />
               
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_new_pwd_2"
                         android:textColor="@color/black"
                        android:textSize="@dimen/frontsize_normal"
                         android:gravity="right" />

                    <EditText
                        android:id="@+id/edt_new_pwd_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:inputType="textPassword"
                        android:layout_weight="1" />
               
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_changepwd_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_changepwd_ok_selector"/>
    </LinearLayout>

